--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -1,5 +1,5 @@
-<span class="table-of-contents-list">Python Practice</span>
+<span class="table-of-contents-list">Python</span>
 <ul class="table-of-contents-list">
-    <li><a href="./python-basic">Python 첫번쨰</a></li>
-    <li><a href="./python-st">Python 두번째</a></li>
+    <li><a href="./python-basic">Python 기본</a></li>
+    <li><a href="./python-st">Python 숫자 계산하기</a></li>
 </ul>
