--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -4,7 +4,7 @@
     <li><a href="./python-st">Python 숫자 계산하기</a></li>
     <li><a href="./python-st">Python 변수 만들기</a></li>
     <li><a href="./python-st">Python 출력 방법</a></li>
-    <li><a href="./python-st">Python 불과 비교, 논리 연산자</a></li>\
+    <li><a href="./python-st">Python 불과 비교, 논리 연산자</a></li>
     <li><a href="./python-st">Python 문자열 사용하기</a></li>
     <li><a href="./python-st">Python 리스트와 튜플 사용하기</a></li>
 </ul>
