--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -9,4 +9,5 @@
     <li><a href="./python-st">Python 리스트와 튜플 사용하기</a></li>
     <li><a href="./python-st">Python 시퀀스 자료형 활용하기</a></li>
     <li><a href="./python-st">Python 딕셔너리 사용하기</a></li>
+    <li><a href="./python-st">Python if 조건문으로 특정 조건일 때 코드 실행하기</a></li>
 </ul>
