--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -13,4 +13,5 @@
     <li><a href="./python-st">Python else를 사용하여 두 방향으로 분기하기</a></li>
     <li><a href="./python-st">Python for 반복문</a></li>
     <li><a href="./python-st">Python while 반복문</a></li>
+    <li><a href="./python-st">Python break, continue로 반복문 제어하기</a></li>
 </ul>
