--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -16,4 +16,6 @@
     <li><a href="./python-st">Python while 반복문</a></li>
     <li><a href="./python-st">Python break, continue로 반복문 제어하기</a></li>
     <li><a href="./python-st">Python 중첩루프</a></li>
+    <li><a href="./python-st">Python FizzBuzz 문제</a></li>
+    <li><a href="./python-st">Python 터틀 그래픽스로 그림 그리기</a></li>
 </ul>
