--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -20,6 +20,7 @@
     <li><a href="./python-st">Python 터틀 그래픽스로 그림 그리기</a></li>
     <li><a href="./python-st">Python 리스트와 튜플 응용하기</a></li>
     <li><a href="./python-st">Python 리스트와 튜플 응용하기 - 2</a></li>
+    <li><a href="./python-st">Python 2차원 리스트 사용하기</a></li>
 </ul>
 
 
