--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -22,6 +22,7 @@
     <li><a href="./python-st">Python 리스트와 튜플 응용하기 - 2</a></li>
     <li><a href="./python-st">Python 2차원 리스트 사용하기</a></li>
     <li><a href="./python-st">Python 문자열 응용하기</a></li>
+    <li><a href="./python-st">Python 딕셔너리 응용하기</a></li>
 </ul>
 
 
