--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -23,6 +23,7 @@
     <li><a href="./python-st">Python 2차원 리스트 사용하기</a></li>
     <li><a href="./python-st">Python 문자열 응용하기</a></li>
     <li><a href="./python-st">Python 딕셔너리 응용하기</a></li>
+    <li><a href="./python-st">Python 세트 사용하기</a></li>
 </ul>
 
 
