--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -24,6 +24,8 @@
     <li><a href="./python-st">Python 문자열 응용하기</a></li>
     <li><a href="./python-st">Python 딕셔너리 응용하기</a></li>
     <li><a href="./python-st">Python 세트 사용하기</a></li>
+    <li><a href="./python-st">Python 파일 사용하기</a></li>
+    <li><a href="./python-st">Python 회문 판별과 N-gram 만들기</a></li>
 </ul>
 
 
