--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -26,6 +26,9 @@
     <li><a href="./python-st">Python 세트 사용하기</a></li>
     <li><a href="./python-st">Python 파일 사용하기</a></li>
     <li><a href="./python-st">Python 회문 판별과 N-gram 만들기</a></li>
+    <li><a href="./python-st">Python 함수 사용하기</a></li>
+    <li><a href="./python-st">Python 함수에서 위치 인수와 키워드 인수 사용하기</a></li>
+    <li><a href="./python-st">Python 함수에서 재귀호출 사용하기</a></li>
 </ul>
 
 
