--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -1,34 +1,34 @@
 <span class="table-of-contents-list">Python</span>
 <ul class="table-of-contents-list">
     <li><a href="./python-basic">Python 기본</a></li>
-    <li><a href="./python-st">Python 숫자 계산하기</a></li>
-    <li><a href="./python-st">Python 변수 만들기</a></li>
-    <li><a href="./python-st">Python 출력 방법</a></li>
-    <li><a href="./python-st">Python 불과 비교, 논리 연산자</a></li>
-    <li><a href="./python-st">Python 문자열 사용하기</a></li>
-    <li><a href="./python-st">Python 리스트와 튜플 사용하기</a></li>
-    <li><a href="./python-st">Python 시퀀스 자료형 활용하기</a></li>
-    <li><a href="./python-st">Python 딕셔너리 사용하기</a></li>
-    <li><a href="./python-st">Python if 조건문으로 특정 조건일 때 코드 실행하기</a></li>
-    <li><a href="./python-st">Python else를 사용하여 두 방향으로 분기하기</a></li>
-    <li><a href="./python-st">Python elif를 사용하여 두 방향으로 분기하기</a></li>
-    <li><a href="./python-st">Python for 반복문</a></li>
-    <li><a href="./python-st">Python while 반복문</a></li>
-    <li><a href="./python-st">Python break, continue로 반복문 제어하기</a></li>
-    <li><a href="./python-st">Python 중첩루프</a></li>
-    <li><a href="./python-st">Python FizzBuzz 문제</a></li>
-    <li><a href="./python-st">Python 터틀 그래픽스로 그림 그리기</a></li>
-    <li><a href="./python-st">Python 리스트와 튜플 응용하기</a></li>
-    <li><a href="./python-st">Python 리스트와 튜플 응용하기 - 2</a></li>
-    <li><a href="./python-st">Python 2차원 리스트 사용하기</a></li>
-    <li><a href="./python-st">Python 문자열 응용하기</a></li>
-    <li><a href="./python-st">Python 딕셔너리 응용하기</a></li>
-    <li><a href="./python-st">Python 세트 사용하기</a></li>
-    <li><a href="./python-st">Python 파일 사용하기</a></li>
-    <li><a href="./python-st">Python 회문 판별과 N-gram 만들기</a></li>
-    <li><a href="./python-st">Python 함수 사용하기</a></li>
-    <li><a href="./python-st">Python 함수에서 위치 인수와 키워드 인수 사용하기</a></li>
-    <li><a href="./python-st">Python 함수에서 재귀호출 사용하기</a></li>
+    <li><a href="./python-basic2">Python 숫자 계산하기</a></li>
+    <li><a href="./python-basic3">Python 변수 만들기</a></li>
+    <li><a href="./python-basic4">Python 출력 방법</a></li>
+    <li><a href="./python-basic5">Python 불과 비교, 논리 연산자</a></li>
+    <li><a href="./python-basic6">Python 문자열 사용하기</a></li>
+    <li><a href="./python-basic7">Python 리스트와 튜플 사용하기</a></li>
+    <li><a href="./python-basic8">Python 시퀀스 자료형 활용하기</a></li>
+    <li><a href="./python-basic9">Python 딕셔너리 사용하기</a></li>
+    <li><a href="./python-basic10">Python if 조건문으로 특정 조건일 때 코드 실행하기</a></li>
+    <li><a href="./python-basic11">Python else를 사용하여 두 방향으로 분기하기</a></li>
+    <li><a href="./python-basic12">Python elif를 사용하여 두 방향으로 분기하기</a></li>
+    <li><a href="./python-basic13">Python for 반복문</a></li>
+    <li><a href="./python-basic14">Python while 반복문</a></li>
+    <li><a href="./python-basic15">Python break, continue로 반복문 제어하기</a></li>
+    <li><a href="./python-basic16">Python 중첩루프</a></li>
+    <li><a href="./python-basic17">Python FizzBuzz 문제</a></li>
+    <li><a href="./python-basic18">Python 터틀 그래픽스로 그림 그리기</a></li>
+    <li><a href="./python-basic19">Python 리스트와 튜플 응용하기</a></li>
+    <li><a href="./python-basic20">Python 리스트와 튜플 응용하기 - 2</a></li>
+    <li><a href="./python-basic21">Python 2차원 리스트 사용하기</a></li>
+    <li><a href="./python-basic22">Python 문자열 응용하기</a></li>
+    <li><a href="./python-basic23">Python 딕셔너리 응용하기</a></li>
+    <li><a href="./python-basic24">Python 세트 사용하기</a></li>
+    <li><a href="./python-basic25">Python 파일 사용하기</a></li>
+    <li><a href="./python-basic26">Python 회문 판별과 N-gram 만들기</a></li>
+    <li><a href="./python-basic27">Python 함수 사용하기</a></li>
+    <li><a href="./python-basic28">Python 함수에서 위치 인수와 키워드 인수 사용하기</a></li>
+    <li><a href="./python-basic29">Python 함수에서 재귀호출 사용하기</a></li>
+    <li><a href="./python-basic30">Python 람다 표현식 사용하기</a></li>
+
 </ul>
-
-
