--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -31,5 +31,6 @@
     <li><a href="./python-basic29">Python 함수에서 재귀호출 사용하기</a></li>
     <li><a href="./python-basic30">Python 람다 표현식 사용하기</a></li>
     <li><a href="./python-basic31">Python 클로저 사용하기</a></li>
+    <li><a href="./python-basic31">Python 클래스 사용하기</a></li>
 
 </ul>
