--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -31,6 +31,9 @@
     <li><a href="./python-basic29">Python 함수에서 재귀호출 사용하기</a></li>
     <li><a href="./python-basic30">Python 람다 표현식 사용하기</a></li>
     <li><a href="./python-basic31">Python 클로저 사용하기</a></li>
-    <li><a href="./python-basic31">Python 클래스 사용하기</a></li>
+    <li><a href="./python-basic32">Python 클래스 사용하기</a></li>
+    <li><a href="./python-basic33">Python 클래스 속성과 정적, 클래스 메서드 사용하기</a></li>
+    <li><a href="./python-basic34">Python 클래스 상속 사용하기</a></li>
+    <li><a href="./python-basic35">Python 두 점 사이의 거리 구하기</a></li>
 
 </ul>
