--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -35,5 +35,9 @@
     <li><a href="./python-basic33">Python 클래스 속성과 정적, 클래스 메서드 사용하기</a></li>
     <li><a href="./python-basic34">Python 클래스 상속 사용하기</a></li>
     <li><a href="./python-basic35">Python 두 점 사이의 거리 구하기</a></li>
+    <li><a href="./python-basic36">Python 예외 처리 사용하기</a></li>
+    <li><a href="./python-basic37">Python 이터레이터 사용하기</a></li>
+    <li><a href="./python-basic38">Python 제너레이터 사용하기</a></li>
+
 
 </ul>
