--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -38,7 +38,8 @@
     <li><a href="./python-basic36">Python 예외 처리 사용하기</a></li>
     <li><a href="./python-basic37">Python 이터레이터 사용하기</a></li>
     <li><a href="./python-basic38">Python 제너레이터 사용하기</a></li>
-    <li><a href="./python-basic38">Python 코루틴 사용하기</a></li>
+    <li><a href="./python-basic39">Python 코루틴 사용하기</a></li>
+    <li><a href="./python-basic40">Python 데코레이터 사용하기</a></li>
 
 
 </ul>
