--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -40,6 +40,7 @@
     <li><a href="./python-basic38">Python 제너레이터 사용하기</a></li>
     <li><a href="./python-basic39">Python 코루틴 사용하기</a></li>
     <li><a href="./python-basic40">Python 데코레이터 사용하기</a></li>
+    <li><a href="./python-basic41">Python 정규표현식 사용하기</a></li>
 
 
 </ul>
