--- a/_includes/python-table-of-contents.html
+++ b/_includes/python-table-of-contents.html
@@ -42,6 +42,7 @@
     <li><a href="./python-basic40">Python 데코레이터 사용하기</a></li>
     <li><a href="./python-basic41">Python 정규표현식 사용하기</a></li>
     <li><a href="./python-basic42">Python 모듈과 패키지 사용하기</a></li>
+    <li><a href="./python-basic43">Python 모듈과 패키지 만들기</a></li>
 
 
 </ul>
